--- a/music_school_nacho/i18n/es.po
+++ b/music_school_nacho/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 18.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-28 13:54+0000\n"
-"PO-Revision-Date: 2025-05-28 13:54+0000\n"
+"POT-Creation-Date: 2025-05-28 16:12+0000\n"
+"PO-Revision-Date: 2025-05-28 16:12+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -58,6 +58,11 @@ msgid "Created on"
 msgstr "Creado el"
 
 #. module: music_school_nacho
+#: model:ir.model.fields,help:music_school_nacho.field_music_school_instrument__last_maintenance_date
+msgid "Date of the last maintenance performed on the instrument"
+msgstr ""
+
+#. module: music_school_nacho
 #: model:ir.model.fields,field_description:music_school_nacho.field_music_school_instrument__description
 #: model_terms:ir.ui.view,arch_db:music_school_nacho.music_school_instrument_view_form
 msgid "Description"
@@ -85,6 +90,11 @@ msgid "Family"
 msgstr "Familia"
 
 #. module: music_school_nacho
+#: model_terms:ir.ui.view,arch_db:music_school_nacho.music_school_student_view_form
+msgid "Generate reference"
+msgstr ""
+
+#. module: music_school_nacho
 #: model:ir.model.fields,field_description:music_school_nacho.field_music_school_instrument__id
 #: model:ir.model.fields,field_description:music_school_nacho.field_music_school_student__id
 msgid "ID"
@@ -107,6 +117,11 @@ msgstr "Instrumentos"
 #: model:ir.model.fields.selection,name:music_school_nacho.selection__music_school_instrument__family__keyboard
 msgid "Keyboard"
 msgstr "Teclado"
+
+#. module: music_school_nacho
+#: model:ir.model.fields,field_description:music_school_nacho.field_music_school_instrument__last_maintenance_date
+msgid "Last Maintenance Date"
+msgstr "Última fecha de mantenimiento"
 
 #. module: music_school_nacho
 #: model:ir.model.fields,field_description:music_school_nacho.field_music_school_instrument__write_uid
@@ -157,6 +172,11 @@ msgstr "Percusión"
 #: model:ir.model.fields,field_description:music_school_nacho.field_music_school_student__phone
 msgid "Phone"
 msgstr "Teléfono"
+
+#. module: music_school_nacho
+#: model:ir.model.fields,field_description:music_school_nacho.field_music_school_student__reference
+msgid "Reference"
+msgstr "Referencia"
 
 #. module: music_school_nacho
 #: model:ir.model.fields,field_description:music_school_nacho.field_music_school_student__user_id
