--- a/music_school_jaume_tor/i18n/es.po
+++ b/music_school_jaume_tor/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 18.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-28 13:57+0000\n"
-"PO-Revision-Date: 2025-05-28 13:57+0000\n"
+"POT-Creation-Date: 2025-05-29 08:45+0000\n"
+"PO-Revision-Date: 2025-05-29 08:45+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -58,7 +58,13 @@ msgid "Created on"
 msgstr "Creado el"
 
 #. module: music_school_jaume_tor
+#: model:ir.model.fields,help:music_school_jaume_tor.field_music_school_instrument__last_maintenance_date
+msgid "Date of the last maintenance performed on the instrument"
+msgstr "Fecha ultimo mentenimiento"
+
+#. module: music_school_jaume_tor
 #: model:ir.model.fields,field_description:music_school_jaume_tor.field_music_school_instrument__description
+#: model_terms:ir.ui.view,arch_db:music_school_jaume_tor.music_school_instrument_view_form
 msgid "Description"
 msgstr "Descripción"
 
@@ -84,19 +90,31 @@ msgid "Family"
 msgstr "Familia"
 
 #. module: music_school_jaume_tor
+#: model_terms:ir.ui.view,arch_db:music_school_jaume_tor.music_school_student_view_form
+msgid "Generate reference"
+msgstr "Generar referencia"
+
+#. module: music_school_jaume_tor
 #: model:ir.model.fields,field_description:music_school_jaume_tor.field_music_school_instrument__id
 #: model:ir.model.fields,field_description:music_school_jaume_tor.field_music_school_student__id
 msgid "ID"
-msgstr "ID"
+msgstr ""
 
 #. module: music_school_jaume_tor
 #: model:ir.actions.act_window,name:music_school_jaume_tor.music_school_instrument_action
 #: model:ir.ui.menu,name:music_school_jaume_tor.music_school_instrument_menu
+#: model_terms:ir.ui.view,arch_db:music_school_jaume_tor.music_school_instrument_view_form
 msgid "Instrument"
 msgstr "Instrumento"
 
 #. module: music_school_jaume_tor
+#: model_terms:ir.ui.view,arch_db:music_school_jaume_tor.music_school_instrument_view_form
+msgid "Instrument maintenance"
+msgstr "Mantenimiento"
+
+#. module: music_school_jaume_tor
 #: model:ir.model,name:music_school_jaume_tor.model_music_school_instrument
+#: model_terms:ir.ui.view,arch_db:music_school_jaume_tor.music_school_instrument_view_list
 msgid "Instruments"
 msgstr "Instrumentos"
 
@@ -104,6 +122,11 @@ msgstr "Instrumentos"
 #: model:ir.model.fields.selection,name:music_school_jaume_tor.selection__music_school_instrument__family__keyboard
 msgid "Keyboard"
 msgstr "Teclado"
+
+#. module: music_school_jaume_tor
+#: model:ir.model.fields,field_description:music_school_jaume_tor.field_music_school_instrument__last_maintenance_date
+msgid "Last Maintenance Date"
+msgstr "Último mantenimiento"
 
 #. module: music_school_jaume_tor
 #: model:ir.model.fields,field_description:music_school_jaume_tor.field_music_school_instrument__write_uid
@@ -121,6 +144,11 @@ msgstr "Última modificación el"
 #: model:res.groups,name:music_school_jaume_tor.group_music_school_manager
 msgid "Manager"
 msgstr "Gerente"
+
+#. module: music_school_jaume_tor
+#: model:ir.module.category,name:music_school_jaume_tor.ir_module_music_school_parent
+msgid "Music"
+msgstr "Música"
 
 #. module: music_school_jaume_tor
 #: model:ir.module.category,name:music_school_jaume_tor.ir_module_music_school
@@ -141,6 +169,11 @@ msgid "Notes"
 msgstr "Notas"
 
 #. module: music_school_jaume_tor
+#: model_terms:ir.ui.view,arch_db:music_school_jaume_tor.music_school_instrument_view_form
+msgid "Observations"
+msgstr "Observaciones"
+
+#. module: music_school_jaume_tor
 #: model:ir.model.fields.selection,name:music_school_jaume_tor.selection__music_school_instrument__family__percussion
 msgid "Percussion"
 msgstr "Percusión"
@@ -149,6 +182,11 @@ msgstr "Percusión"
 #: model:ir.model.fields,field_description:music_school_jaume_tor.field_music_school_student__phone
 msgid "Phone"
 msgstr "Teléfono"
+
+#. module: music_school_jaume_tor
+#: model:ir.model.fields,field_description:music_school_jaume_tor.field_music_school_student__reference
+msgid "Reference"
+msgstr "Referencia"
 
 #. module: music_school_jaume_tor
 #: model:ir.model.fields,field_description:music_school_jaume_tor.field_music_school_student__user_id
@@ -198,8 +236,3 @@ msgstr "Usuario"
 #: model:ir.model.fields.selection,name:music_school_jaume_tor.selection__music_school_instrument__family__wind
 msgid "Wind"
 msgstr "Viento"
-
-#. module: music_school_jaume_tor
-#: model_terms:ir.ui.view,arch_db:music_school_jaume_tor.music_school_student_view_form
-msgid "Generate reference"
-msgstr "Generar referencia"
